doc: swago login
